tests/textual/error/appendString-wrong-1st-argument.uplc
(program 0.0.0 [ [ (builtin appendString) (con integer 0)] (con string " mundo!") ])